<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTitle"
            android:layout_marginTop="8dp"
            android:hint="@string/description" />

        <Spinner
            android:id="@+id/spinnerStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editDescription"
            android:layout_marginTop="8dp"
            android:entries="@array/status_array"
            android:prompt="@string/select_status" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinnerStatus"
            android:layout_marginTop="16dp"
            android:text="@string/save" />
        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinnerStatus"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            android:text="@string/delete" />
    </RelativeLayout></androidx.core.widget.NestedScrollView>
